26/37 tracker:core+slow / sparql test FAILs against sqlite-3.40.0 (3.39.4 was ok)
Noticed the problem a s tracer
test failure after NixOS
upgraded sqlite
from 3.39.4
to 3.40.0
: https://github.com/NixOS/nixpkgs/pull/201550#issuecomment-1320871391
There one tracker
test started failing:
tracker> >>> LANG=en_US.UTF8 TRACKER_LANGUAGE_STOP_WORDS_DIR=/build/tracker/src/libtracker-common/stop-words MALLOC_PERTURB_=61 /build/tracker/build/tests/core/tracker-sparql-test
tracker> ✀
tracker> Listing only the last 100 lines from a long log.
tracker> # Tracker-DEBUG: Applying ontologies from /build/tracker/tests/core/property-paths
tracker> # Tracker-DEBUG: Saving DB locale as: 'C'
tracker> # Tracker-DEBUG: Cleaning up stale resource URIs
tracker> ok 259 /core/sparql/property-paths/recursive-path-2
tracker> # Tracker-DEBUG: Applying ontologies from /build/tracker/tests/core/property-paths
tracker> # Tracker-DEBUG: Saving DB locale as: 'C'
tracker> # Tracker-DEBUG: Cleaning up stale resource URIs
tracker> ok 260 /core/sparql/property-paths/recursive-path-3
tracker> # Tracker-DEBUG: Applying ontologies from /build/tracker/tests/core/property-paths
tracker> # Tracker-DEBUG: Saving DB locale as: 'C'
tracker> # Tracker-DEBUG: Cleaning up stale resource URIs
tracker> ok 261 /core/sparql/property-paths/alternative-path-1
tracker> # Tracker-DEBUG: Applying ontologies from /build/tracker/tests/core/property-paths
tracker> # Tracker-DEBUG: Saving DB locale as: 'C'
tracker> # Tracker-DEBUG: Cleaning up stale resource URIs
tracker> ok 262 /core/sparql/property-paths/alternative-path-2
tracker> # Tracker-DEBUG: Applying ontologies from /build/tracker/tests/core/property-paths
tracker> # Tracker-DEBUG: Saving DB locale as: 'C'
tracker> Bail out! Tracker-FATAL-ERROR: --- /build/tracker/tests/core/property-paths/alternative-path-3.out 1970-01-01 00:00:01.000000000 +0000
tracker> +++ - 2022-11-19 16:32:21.065331386 +0000
tracker> @@ -1,20 +1,20 @@
tracker> +"Alice" "55"
tracker> +"Alice" "56"
tracker> +"Alice" "7"
tracker> +"Alice" "78"
tracker> "Alice" "Alice"
tracker> -"Alice" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Alice" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Alice" "http://xmlns.com/foaf/0.1/Person"
tracker> -"Alice" "mailto:alice@work"
tracker> +"Bob" "55"
tracker> +"Bob" "56"
tracker> +"Bob" "7"
tracker> +"Bob" "80"
tracker> +"Bob" "81"
tracker> "Bob" "Bob"
tracker> -"Bob" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Bob" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Bob" "http://xmlns.com/foaf/0.1/Person"
tracker> -"Bob" "mailto:bob@home"
tracker> -"Bob" "mailto:bob@work"
tracker> +"Eve" "55"
tracker> +"Eve" "56"
tracker> +"Eve" "7"
tracker> "Eve" "Eve"
tracker> -"Eve" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Eve" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Eve" "http://xmlns.com/foaf/0.1/Person"
tracker> +"Fred" "55"
tracker> +"Fred" "56"
tracker> +"Fred" "7"
tracker> +"Fred" "84"
tracker> "Fred" "Fred"
tracker> -"Fred" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Fred" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Fred" "http://xmlns.com/foaf/0.1/Person"
tracker> -"Fred" "mailto:fred@edu"
tracker> stderr:
tracker> (/build/tracker/build/tests/core/tracker-sparql-test:2846): Tracker-ERROR **: 16:32:21.065: --- /build/tracker/tests/core/property-paths/alternative-path-3.out 1970-01-01 00:00:01.000000000 +0000
tracker> +++ - 2022-11-19 16:32:21.065331386 +0000
tracker> @@ -1,20 +1,20 @@
tracker> +"Alice" "55"
tracker> +"Alice" "56"
tracker> +"Alice" "7"
tracker> +"Alice" "78"
tracker> "Alice" "Alice"
tracker> -"Alice" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Alice" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Alice" "http://xmlns.com/foaf/0.1/Person"
tracker> -"Alice" "mailto:alice@work"
tracker> +"Bob" "55"
tracker> +"Bob" "56"
tracker> +"Bob" "7"
tracker> +"Bob" "80"
tracker> +"Bob" "81"
tracker> "Bob" "Bob"
tracker> -"Bob" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Bob" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Bob" "http://xmlns.com/foaf/0.1/Person"
tracker> -"Bob" "mailto:bob@home"
tracker> -"Bob" "mailto:bob@work"
tracker> +"Eve" "55"
tracker> +"Eve" "56"
tracker> +"Eve" "7"
tracker> "Eve" "Eve"
tracker> -"Eve" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Eve" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Eve" "http://xmlns.com/foaf/0.1/Person"
tracker> +"Fred" "55"
tracker> +"Fred" "56"
tracker> +"Fred" "7"
tracker> +"Fred" "84"
tracker> "Fred" "Fred"
tracker> -"Fred" "http://www.w3.org/2000/01/rdf-schema#Resource"
tracker> -"Fred" "http://xmlns.com/foaf/0.1/Agent"
tracker> -"Fred" "http://xmlns.com/foaf/0.1/Person"
tracker> -"Fred" "mailto:fred@edu"
tracker> 27/37 tracker:functional / portal OK 2.75s
tracker> 28/37 tracker:core / service OK 2.95s
tracker> 29/37 tracker:sparql / sparql OK 0.07s
tracker> 30/37 tracker:sparql / namespaces OK 0.08s
tracker> 31/37 tracker:sparql / fd OK 0.15s
tracker> 32/37 tracker:sparql / cursor+json OK 0.19s
tracker> 33/37 tracker:sparql / cursor+xml OK 0.19s
tracker> 34/37 tracker:sparql / statement OK 0.20s
tracker> 35/37 tracker:examples / endpoint OK 0.28s
tracker> 36/37 tracker:sparql / deserialize OK 0.41s
tracker> 37/37 tracker:sparql / serialize OK 0.63s
tracker> Summary of Failures:
tracker> 26/37 tracker:core+slow / sparql FAIL 2.13s killed by signal 5 SIGTRAP
Could be some side-effect of sqlite
change?